Like and visit api bug's fix
